# apeiron

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakeOptions.txt  CONTRIBUTING.md  GETTING_STARTED.MD  LICENSE  README.md
examples/: CMakeLists.txt  README.md
examples/hello/: CMakeLists.txt
examples/hello/src/: hello.cpp  hello.rc
lib/: CMakeLists.txt
lib/include/apeiron/: apeiron.h  apeiron.hpp
lib/include/apeiron/application/: application.hpp
lib/include/apeiron/platform/: version.hpp
lib/media/sprites/: apeiron.xcf
lib/src/apeiron/: apeiron.cpp
lib/src/application/: application.cpp
